2005-09-21  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnomeui/gnome-file-entry.c: (browse_dialog_ok):
	Fix a crasher. Fix from Petr Mladek. Closes
	bug #315549.
	* libgnomeui/gnome-pixmap-entry.c: (refresh_preview),
	(setup_preview): Fix a crash on Solaris. Patch from
	Vijaykumar Patwari. Closes bug #122703.

==================== 2.12.0 =====================

2005-09-06  Kjartan Maraas  <kmaraas@gnome.org>

	* NEWS: Update
	* configure.in: Release 2.12.0

2005-09-06  Kjartan Maraas  <kmaraas@gnome.org>

	No code is touched by these changes. :-)

	* libgnomeui/gnome-multiscreen.c: API doc fixes
	* libgnomeui/gnome-password-dialog.c: Same
	* libgnomeui/gnome-thumbnail-pixbuf-utils.c: Same
	* libgnomeui/gnome-thumbnail.c: Same.

2005-08-31  Baris Cicek <baris@teamforce.name.tr>

	* configure.in: Added ku to ALL_LINGUAS

2005-08-30  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnomeui/gnome-app-helper.c: Fix warning where _ got
	defined twice which breaks the AIX compiler. Closes
	bug #160956.

2005-08-30  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnomeui/libgnomeui-2.0.pc.in: Add gnome-keyring-1 to the
	Requires: line. Bug #167675.

2005-08-29  Tor Lillqvist  <tml@novell.com>

	* libgnomeui-zip.in: Include also documentation in the developer
	zipfile.

======================== 2.11.4 =====================

2005-08-26  Federico Mena Quintero  <federico@ximian.com>

	* file-chooser/gtkfilesystemgnomevfs.c: Oops, set this back to
	"#undef PROFILE_FILE_CHOOSER".

2005-08-26  Federico Mena Quintero  <federico@ximian.com>

	* file-chooser/gtkfilesystemgnomevfs.c (fs_module_init): See how
	long it takes to call gnome_vfs_init().

2005-08-26  Matthias Clasen  <mclasen@redhat.com>

	* file-chooser/gtkfilesystemgnomevfs.c (folder_purge_and_unmark): 
	Pass the address of the closure struct to the 
	g_hash_table_foreach_steal() call.  (#314586)

====================== 2.11.3 ======================

2005-08-19  Kjartan Maraas  <kmaraas@gnome.org>
